Conversion to Pyramids

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,5 @@
---------------darkcoinj
-HashEngineering <hashengineeringsolutions@gmail.com>
-
---------------digitalcoinj
-HashEngineering <hashengineeringsolutions@gmail.com>
+--------------pyramidscoinj
+Pyramidscoin <pyramidscoin@gmail.com>
 
 --------------bitcoinj
 Mike Hearn <mike@plan99.net>
